# vocab-snap

./: .gitignore
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: health.py
frontend/: README.md
frontend/src/app/: layout.tsx  page.tsx
